@@ -376,3 +376,9 @@
 	* Entry: Added double click and triple click.
 	Double click selects a word.
 	Triple click selects a line.
+
+2012-03-07  Tom Hacohen (TAsn)
+
+	* Entry: Replaced edje_object_part_text_style_user_set/get 
+	with edje_object_part_text_style_user_set/get to correspond to
+	textblock's recent changes.
